# otp-guesser

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cpu.rs  device.rs  main.rs
