[package]
name = "otp-guesser"
version = "0.1.0"
edition = "2021"
license = "GPL-3"

[dependencies]
itertools = "0.14.0"
num_cpus = "1.17.0"
tokio = { version = "1.45.1", features = ["rt", "macros", "rt-multi-thread"] }
clap = { version = "4.5.39", features = ["derive"] }
minus = { version = "5.6.1", features = ["static_output"] }